feat: extend i18n keywords

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,3 +1,7 @@
-# Cookie settings
+# Privacy & Cookie settings
+- id: privacy
+  translation: "Privacy"
+- id: cookies
+  translation: "Cookies"
 - id: cookieSettings
   translation: "Cookie settings"
