--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -1,3 +1,7 @@
-# Cookie settings
+# Privacy & Cookie settings
+- id: privacy
+  translation: "Confidentialité"
+- id: cookies
+  translation: "Cookies"
 - id: cookieSettings
   translation: "Paramètres des cookies"
