fix: add missing translation

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -5,3 +5,5 @@
   translation: "Cookies"
 - id: cookieSettings
   translation: "Cookie settings"
+- id: revisitConsent
+  translation: "Revisit consent"
