--- a/i18n/nl.yaml
+++ b/i18n/nl.yaml
@@ -5,3 +5,5 @@
   translation: "Cookies"
 - id: cookieSettings
   translation: "Cookie-instellingen"
+- id: revisitConsent
+  translation: "Herzien cookie-instellingen"
